# data-systems-from-first-principles

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  cloud-architecture.md  final-demo.md  runbook.md
docs/final-report-draft/: README.md  final-report.md  metadata-lineage-quality.md  model-card.md  results.md  sequential-recommender.md
docs/final-report-draft/Content/: Part1.tex  Part2.tex
docs/final-report-draft/dtu-template/: document.bib  main.tex
docs/weekly-notes/: README.md  week01-storage.md  week02-replication.md  week03-sharding.md  week04-batch.md  week05-stream.md  week06-stream.md  week07-integration.md  week08-evaluation.md  week09-ai-inference.md  week10-scaling-and-cloud.md  week11-sequential-recommender.md  week12-metadata-lineage-quality.md
src/mlstore_lite/ai/: __init__.py  audit.py  feature_server.py  inference.py  model.py  prediction_log.py  sequential_inference.py  sequential_model.py
src/mlstore_lite/batch/: __init__.py  engine.py  features.py
src/mlstore_lite/catalog/: __init__.py  feature_registry.py
src/mlstore_lite/experiments/: __init__.py  final_demo.py  final_demo_app.py  run_all.py  week10_hotspot_experiment.py  week10_scaling_experiment.py  week11_recommender_demo.py  (+9 more)
tests/: test_ai_inference.py  test_batch.py  test_catalog.py  test_flush_and_compaction.py  test_integration.py  test_lineage.py  test_observability.py  test_quality.py  test_recovery.py  test_replication.py  test_sequential_recommender.py  test_sharding.py  test_stream.py
(+35 files in other folders)
