[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlstore-lite"
version = "0.1.0"
description = "Educational data-systems prototype for ML-style feature infrastructure."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]
ui = [
    "streamlit>=1.30",
]

[tool.setuptools.packages.find]
where = ["src"]
